--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Contact Us</h1>
-    <p>Email: info@cybersecure.com</p>
+    <p>Email: info@qwertytech.com</p>
     <p>Phone: +123 456 7890</p>
 </body>
 </html>
