--- a/main/templates/home/index.html
+++ b/main/templates/home/index.html
@@ -4,7 +4,7 @@
     <title>Cybersecurity Company</title>
 </head>
 <body>
-    <h1>Welcome to Our Cybersecurity Services</h1>
+    <h1>Welcome to Our Qwerty Tech Cybersecurity Solutions</h1>
     <a href="{% url 'services' %}">Our Services</a> |
     <a href="{% url 'blog' %}">Blog</a> |
     <a href="{% url 'contact' %}">Contact Us</a>
