--- a/services/templates/services/services.html
+++ b/services/templates/services/services.html
@@ -10,6 +10,9 @@
         <li>Security Audits & Compliance</li>
         <li>Incident Response</li>
         <li>Threat Intelligence</li>
+        <li>Software Development</li>
+        <li>Website Development</li>
+        <li>access control installation</li>
     </ul>
 </body>
 </html>
