--- a/main/templates/home/index.html
+++ b/main/templates/home/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Cybersecurity Company</title>
+    <title>Qwerty Tech</title>
 </head>
 <body>
-    <h1>Welcome to Our Qwerty Tech Cybersecurity Solutions</h1>
+    <h1>Welcome to Qwerty Tech Cybersecurity Solutions</h1>
     <a href="{% url 'services' %}">Our Services</a> |
     <a href="{% url 'blog' %}">Blog</a> |
     <a href="{% url 'contact' %}">Contact Us</a>
